--- a/index.css
+++ b/index.css
@@ -5,23 +5,16 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   background-color: black;
-  /* background: url("/images/HD-Galaxy-Wallpapers-Free-Download-111.jpg")
-    no-repeat center center fixed; */
-  background-size: cover;
+  background-image: url(/uselesswebsite/images/HD-Galaxy-Wallpapers-Free-Download-111.jpg);
   overflow: hidden;
   flex-direction: column;
 }
 
 .astroworld-universe {
-  background-image: url(/images/HD-Galaxy-Wallpapers-Free-Download-111.jpg);
   position: relative;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  height: 100%;
-  width: 100%;
 }
 
 .astroworld-container {
@@ -62,7 +55,7 @@ body {
   outline: none;
   font-size: larger;
   text-shadow: 1px 1px 2px black;
-  background-image: url("/images/illusion.jpg");
+  background-image: url("/uselesswebsite/images/illusion.jpg");
 }
 
 .astro-button:hover {
