--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ body {
   outline: none;
   font-size: larger;
   text-shadow: 1px 1px 2px black;
-  background-image: url("/uselesswebsite/images/illusion.jpg");
+  background-image: url("https://i.pinimg.com/originals/3a/28/74/3a2874da5d1ea789827dc6fea2f7af87.png");
 }
 
 .astro-button:hover {
