--- a/index.css
+++ b/index.css
@@ -42,9 +42,9 @@ body {
 
 .astro-button {
   display: flex;
+  background-color: white;
   justify-content: center;
   align-items: center;
-  background-color: white;
   width: 15rem;
   height: 2.5rem;
   margin-top: 4rem;
@@ -54,7 +54,8 @@ body {
   outline: none;
   font-size: larger;
   text-shadow: 1px 1px 2px black;
-  background-image: url("https://i.pinimg.com/originals/3a/28/74/3a2874da5d1ea789827dc6fea2f7af87.png");
+  background-size: cover;
+  background-image: url("https://i.pinimg.com/564x/14/d2/e6/14d2e6629d139ceeaa62480761973830.jpg");
 }
 
 .astro-button:hover {
