--- a/nonono.css
+++ b/nonono.css
@@ -2,21 +2,16 @@ body {
   margin: auto;
 }
 
-.videoContainer {
+.gifContainer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 0;
 }
 
-.video {
+.gif {
   object-fit: cover;
-  width: 100%;
-  height: 170px;
-}
-
-.video.first {
-  grid-column: 1 / 3;
-  grid-row: 1;
+  width: 50vw;
+  height: 200px;
 }
 
 @media screen and (min-width: 380px) {
@@ -24,20 +19,20 @@ body {
     margin: auto;
   }
 
-  .videoContainer {
+  .gifContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 0;
   }
 
-  .video {
+  .gif {
     object-fit: cover;
     width: 100%;
-    height: 300px;
+    height: 400px;
   }
 
-  .video.first {
-    grid-column: 1;
+  .gif:first-child {
+    grid-column: 1 / 4;
     grid-row: 1;
   }
 }
