--- a/index.css
+++ b/index.css
@@ -1,27 +1,78 @@
+:root {
+  --main-bg-color: black;
+  --second-bg-color: white;
+  --third-bg-color: red;
+  --main-bg-font: "Shadows Into Light";
+}
+@font-face {
+  font-family: "Shadows Into Light";
+  src: url("/assets/ShadowsIntoLight-Regular.woff") format("woff");
+}
 body {
+  height: 100%;
   height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
   justify-content: center;
   align-items: center;
+  background-color: var(--main-bg-color);
 }
-
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: var(--main-bg-font);
+  font-size: 25px;
   width: 8rem;
   height: 8rem;
   border: solid thin;
   text-decoration: none;
   outline: none;
-  color: black;
+  color: var(--third-bg-color);
   border-radius: 35rem;
 }
 
 button:hover {
-  box-shadow: 0 0 0 10000px red;
+  box-shadow: 0 0 0 10000px var(--third-bg-color);
   transition: ease-in 0.3s;
-  color: red;
+  color: var(--third-bg-color);
+}
+
+.title {
+  font-family: var(--main-bg-font);
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  margin-bottom: 20rem;
+  color: var(--second-bg-color);
+}
+
+.titleTwo {
+  font-family: var(--main-bg-font);
+  font-size: 20px;
+  font-weight: bold;
+  position: absolute;
+  margin-top: 20rem;
+  color: var(--second-bg-color);
+}
+
+@media screen and (min-width: 380px) {
+  body {
+    background: var(--second-bg-color);
+  }
+
+  .button {
+    color: var(--main-bg-color);
+  }
+
+  .title {
+    color: var(--main-bg-color);
+  }
+
+  .titleTwo {
+    color: var(--main-bg-color);
+  }
 }
