--- a/nonono.css
+++ b/nonono.css
@@ -1,38 +1,39 @@
 body {
-  margin: auto;
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+  width: 100%;
 }
 
 .gifContainer {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 0;
+  grid-template-columns: 1fr 1fr;
+  margin: 0;
+  padding: 0;
 }
 
 .gif {
-  object-fit: cover;
-  width: 50vw;
-  height: 200px;
+  height: 17rem;
+  width: 22rem;
 }
 
 @media screen and (min-width: 380px) {
   body {
-    margin: auto;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100%;
   }
 
   .gifContainer {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 0;
+    grid-template-columns: 1fr 1fr 1fr;
+    background: var(--main-bg-color);
   }
 
   .gif {
-    object-fit: cover;
-    width: 100%;
-    height: 400px;
-  }
-
-  .gif:first-child {
-    grid-column: 1 / 4;
-    grid-row: 1;
+    height: 55rem;
+    width: 40rem;
+    object-fit: contain;
   }
 }
