--- a/nonono.css
+++ b/nonono.css
@@ -1,15 +1,24 @@
+:root {
+  --main-bg-color: black;
+  --second-bg-color: white;
+  --main-bg-font: "Shadows Into Light";
+}
+
 body {
   padding: 0;
   margin: 0;
-  height: 100vh;
-  width: 100%;
+  /* height: 100vh; */
+  /* width: 100%; */
+  overflow: hidden;
+  background-color: var(--main-bg-color);
 }
 
 .gifContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 0;
+  grid-template-columns: 1fr;
+  margin-left: 11px;
   padding: 0;
+  background-color: var(--main-bg-color);
 }
 
 .gif {
