--- a/secondPage.css
+++ b/secondPage.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   /* height: 100vh; */
   /* width: 100%; */
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: var(--main-bg-color);
 }
 
