--- a/secondPage.css
+++ b/secondPage.css
@@ -1,5 +1,5 @@
 :root {
-  --main-bg-color: black;
+  --main-bg-color: teal;
   --second-bg-color: white;
   --main-bg-font: "Shadows Into Light";
 }
@@ -14,10 +14,10 @@ body {
 }
 
 .gifContainer {
-  display: grid;
+  /* display: grid;
   grid-template-columns: 1fr;
   margin-left: 11px;
-  padding: 0;
+  padding: 0; */
   background-color: var(--main-bg-color);
 }
 
@@ -30,14 +30,14 @@ body {
   body {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100%;
+    /* height: 100vh;
+    width: 100%; */
   }
 
   .gifContainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    background: var(--main-bg-color);
+    background: red;
   }
 
   .gif {
