--- a/secondPagesecond.css
+++ b/secondPagesecond.css
@@ -1,12 +1,9 @@
-@media screen and (min-width: 1500px) {
+@media screen and (min-width: 1300px) {
   .gifContainer {
     overflow: hidden;
     height: 100vh;
     display: grid;
-    grid-template-columns: 400px 400px 400px 0px;
-    grid-template-rows: 135px 135px 135px 200px;
-    column-gap: 90px;
-    row-gap: 85px;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .gif {
