--- a/secondPagesecond.css
+++ b/secondPagesecond.css
@@ -1,3 +1,11 @@
+@media screen and (max-width: 900px) {
+  .gif {
+    width: 35vw;
+    height: 35vh;
+    object-fit: contain;
+  }
+}
+
 @media screen and (min-width: 1300px) {
   .gifContainer {
     overflow: hidden;
